# fortest

./: README.md
BFSCoarse/: CMakeLists.txt  bfs.cu  gpu_kernels.cu  gpu_kernels.cuh  main.cu
DTNN/: CMakeLists.txt  main.cu  test.cuh
GridGraphBFS/: CMakeLists.txt  main.cpp
GridGraphBFS/core/: bigvector.hpp  graph.hpp
GridGraphPR/: main.cpp
PRCoarse/: CMakeLists.txt  gpu_kernels.cu  main.cu
SSSPCoarse/: CMakeLists.txt  main.cu  pagerank.cu  sssp.cu
csrConverter/: readme.md
ptGraph/: CalculateOpt.cu  GraphMeta.cuh  main.cu
